update: remove config-related code

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ logoFile='44cf9030-c049-459b-868b-d679dad3c8bd.png'
 [[dependencies.eeemod]]
 modId='enchlevellangpatch'
 mandatory=true
-versionRange='[1,2)'
+versionRange='[1,)'
 ordering='NONE'
 side='CLIENT'
 
