--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license='WTFPL'
 
 [[mods]]
 modId='eeemod'
-version='${file.jarVersion}'
+version='${version}'
 displayName='eeeeeeeeee'
 description='eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee'
 authors='teddyxlandlee'
